--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,4 @@
 export KOPS_STATE_STORE=s3://clusters.codefiction.io
 export KUBECONFIG=~/workspace/project-template/.kube/config
 export AWS_PROFILE=default
+export AWS_DEFAULT_REGION=eu-west-1
